# chatnoir-web

./: .dockerignore  .gitignore  Dockerfile  README.md  build-docker.sh  docker-entrypoint.sh  jsconfig.json  kubernetes-deployment.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  wsgi.ini
.devcontainer/: Dockerfile.dev  devcontainer.json
chatnoir/: chatnoir_manage.py  manage.py  pyproject.toml  requirements.txt  wsgi.ini
chatnoir/chatnoir/: local_settings.example.py  logging.py  settings.py  settings_common.py  urls.py  wsgi.py
chatnoir/chatnoir_admin/: settings.py  urls.py  wsgi.py
chatnoir/chatnoir_api/: admin.py  apps.py  authentication.py  forms.py  models.py  negotiation.py  serializers.py  urls.py  validators.py  views.py
chatnoir/chatnoir_api_v1/: admin.py  apps.py  authentication.py  forms.py  metadata.py  models.py  search.py  serializers.py  urls.py  validators.py  views.py
chatnoir/chatnoir_apikey_management/: admin.py  apps.py  chatnoir.py  forms.py  urls.py  views.py
chatnoir/chatnoir_frontend/: apps.py  context_processors.py  error_views.py  templatetags.py  urls.py  views.py
chatnoir/chatnoir_search/: elastic_backend.py  ir_anthology_search.py  ir_anthology_serp.py  search.py  (+2 more)
chatnoir2_apikey_frontend/: settings.py  urls.py
chatnoir_ui/: .env  .env.development  .env.production  .eslintrc.js  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs  vue.config.js
frontend/: admin.py  chatnoir.py  forms.py  models.py  urls.py  views.py
src/: manage.py
(+260 files in other folders)
