[tool.poetry]
name = "chatnoir"
version = "2.1.0"
description = "ChatNoir Web Backend"
authors = ["Janek Bevendorff <janek.bevendorff@uni-weimar.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "*", from = "chatnoir" }
]

[tool.poetry.dependencies]
python = "^3.10"
uwsgi = "^2.0.29"
boto3 = "^1.38.33"
django = ">=4.0,<6.0"
django-cors-headers = "^4.7.0"
djangorestframework = "^3.16.0"
django-countries = "^7.6.1"
django-solo = "^2.4.0"
elasticsearch = ">=7.0.0,<8.0.0"
elasticsearch-dsl = ">=7.0.0,<8.0.0"
fastwarc = "^0.15.2"
mistune = "^3.1.3"
python-frontmatter = "^1.1.0"
resiliparse = "^0.15.2"
tzdata = "^2025.2"
psycopg = "^3.2.7"
django-minify-html = "^1.12.0"

[tool.poetry.scripts]
chatnoir-manage = 'chatnoir_manage:main'
chatnoir-serve = 'chatnoir_manage:serve'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
